# Point-Cloud-Processing-example

./: README.md
第七章/1 range_image_creation/source/: CMakeLists.txt  range_image_creation.cpp
第七章/2 range_image_border_extraction/source/: CMakeLists.txt  range_image_border_extraction.cpp
第七章/3/source/: 1.pcd  CMakeLists.txt  greedy_projection.cpp
第三章/1 reading pcd/source/: CMakeLists.txt  pcd_read.cpp  test_pcd.pcd
第三章/10/linescaner/: CMakeLists.txt
第三章/10/linescaner/header/: LineScaner.h  stdafx.h
第三章/10/linescaner/src/: LineScaner.cpp
第三章/10/linescaner/third/: DllLoader.cpp  DllLoader.h  InterfaceLLT_2.cpp  InterfaceLLT_2.h  scanControlDataTypes.h
第三章/2 writing pcd/source/: CMakeLists.txt  pcd_write.cpp
第三章/3 concatenating pcd/source/: CMakeLists.txt  concatenate_clouds.cpp
第三章/4 openni pcd/source/: CMakeList.txt  openni_grabber.cpp
第三章/5/source/: CMakeLists.txt  ground.las  las2pcd.cpp
第三章/5/source/libLAS/include/liblas/: bounds.hpp  chipper.hpp  classification.hpp  color.hpp  compatibility.hpp  dimension.hpp  error.hpp  exception.hpp  export.hpp  factory.hpp  filter.hpp  header.hpp  index.hpp  iterator.hpp  liblas.hpp  point.hpp  reader.hpp  schema.hpp  spatialreference.hpp  transform.hpp  utility.hpp  variablerecord.hpp  version.hpp  writer.hpp
第三章/5/source/libLAS/include/liblas/capi/: las_config.h  las_version.h  liblas.h
第三章/5/source/libLAS/include/liblas/detail/: binary.hpp  endian.hpp  file_ptr_stream.hpp  fwd.hpp  opt_allocator.hpp  pointrecord.hpp  private_utility.hpp  sha1.hpp  singleton.hpp  timer.hpp  zippoint.hpp
第三章/5/source/libLAS/include/liblas/detail/index/: indexcell.hpp  indexoutput.hpp
第三章/5/source/libLAS/include/liblas/detail/reader/: cachedreader.hpp  header.hpp  reader.hpp  zipreader.hpp
第三章/5/source/libLAS/include/liblas/detail/writer/: header.hpp  point.hpp  writer.hpp  zipwriter.hpp
第三章/5/source/libLAS/lib/: liblas.lib  liblas_c.lib
第三章/6/source/: CMakeLists.txt  ply2pcd.cpp  test.ply
第三章/7/source/: CMakeLists.txt  pcd2ply.cpp  test.pcd
第三章/8/kinect2/source/: CMakeLists.txt  FindKinectSDK2.cmake  kinect2_grabber.h  main.cpp
第三章/9/1/: CMakeLists.txt  package.xml
第三章/9/2/: CMakeLists.txt  package.xml
第三章/9/2/src/: main.cpp  myrviz.cpp  myrviz.h
第九章/1 random_sample_consensus/source/: random_sample_consensus.cpp
第九章/2 matrix_ransac/source/: CMakeLists.txt  matrix_ransac.cpp
第九章/2 matrix_ransac/source/cmake/: pcl_find_cuda.cmake
第二章/1/: CMakeLists.txt  testfilter.cpp
第二章/2/: mainBilateralFilter.cpp
第二章/3/: bilateral.hpp
第二章/4/: bilateral.h
第二章/5/: bilateral.cpp  bilateral.h  bilateral.hpp
第二章/64 2010 3part and vs/: QVTKWidgetPlugin.lib  readme.txt
第五章/1 cloud_viewer/source/: CMakeLists.txt  cloud_viewer.cpp  maize.pcd
第五章/2 range_image_visualization/source/: CMakeLists.txt  range_image_visualization.cpp  room_scan1.pcd
第五章/3 pcl_visualizer_demo/source/: CMakeLists.txt  pcl_visualizer_demo.cpp
第五章/4plotter/source/: CMakeLists.txt  mesh.pcd  pcl_plotter_demo.cpp
第五章/6mfc/: mfc_visualization_1_6_src.rar  readme.txt
第五章/7pcdshowin_web/: .gitignore  index.html
第八章/1 narf_keypoint_extraction/source/: CMakeLists.txt  narf_keypoint_extraction.cpp
第八章/2 siftsource/source/: CMakeLists.txt  Siftdetect.cpp  pig.pcd
第八章/3/: CMakeLists.txt  Harrisdetect.cpp  roorm.pcd
第八章/4 Correspondence Grouping/source/: correspondence_grouping.cpp  milk_cartoon_all_small_clorox.pcd  milk_pose_changed.pcd
第六章/1 passthrough/source/: CMakeLists.txt  passthrough.cpp
第六章/2 voxel_grid/source/: CMakeLists.txt  voxel_grid.cpp
第六章/3 statistical_removal/source/: CMakeLists.txt  statistical_removal.cpp
第六章/4 project_inliers/source/: CMakeLists.txt  project_inliers.cpp
第六章/5 extract_indices/source/: CMakeLists.txt  extract_indices.cpp
第六章/6 remove_outliers/source/: CMakeLists.txt  remove_outliers.cpp
第六章/7 CropHull/source/: CMakeLists.txt  crophull.cpp  pig.pcd
第十一章/1 iterative_closest_point/source/: CMakeList.txt  iterative_closest_point.cpp
第十一章/2 pairwise_incremental_registration/source/: CMakeLists.txt  capture0001.pcd  capture0003.pcd  capture0004.pcd  capture0005.pcd  pairwise_incremental_registration.cpp
第十一章/3 normal_distributions_transform/: capture0002.pcd
第十一章/3 normal_distributions_transform/source/: CMakeLists.txt  normal_distributions_transform.cpp
第十一章/4Interactive_Iterative_Closest_Point/source/: CMakeLists.txt  interactive_icp.cpp
第十一章/5Robust_pose_estimation_of_rigid_objects/source/: CMakeLists.txt  alignment_prerejective.cpp
第十一章/6 template_alignment/source/: CMakeLists.txt
第十一章/7 cluster recognition/source/: nearest_neighbors.cpp
第十一章/8regdllsource/: CMakeLists.txt  MainWindow.ui  Registration.cpp  Registration.h  main.cpp
第十一章/8regdllsource/header/: FineRG.h  IinitalRG.h  stdafx.h
第十一章/8regdllsource/src/: FineRG.cpp  IinitalRG.cpp
第十一章/9inter_reg/: LiveCloud.cpp  LiveCloud.h
第十三章/1 resampling/source/: CMakeLists.txt  bun0.pcd  resampling.cpp
第十三章/2 concave_hull_2d/source/: CMakeLists.txt  concave_hull_2d.cpp
第十三章/3 greedy_projection/source/: greedy_projection.cpp  (+1 more)
第十三章/5 2Dfitting/source/: 2dcurvefitting.cpp  CMakeLists.txt  test.pcd
第十二章/11 motion_seg_source/source/: CMakeLists.txt  hybird_rigid_ICP.cpp
第十二章/11 motion_seg_source/source/test/: frame_20130630T165905.871232.pcd  frame_20130630T165906.401633.pcd  frame_20130630T165906.760433.pcd  frame_20130630T165907.134834.pcd  frame_20130630T165907.852435.pcd  frame_20130630T165908.242436.pcd  frame_20130630T165908.710437.pcd  frame_20130630T165909.116038.pcd  frame_20130630T165909.615238.pcd  frame_20130630T165911.346841.pcd
第十章/1 normal_estimation/source/: CMakeLists.txt  normal_estimation.cpp
第十章/7boundary_source/: CMakeLists.txt  boundary.cpp
第十章/7boundary_source/data/: 1.pcd
第十章/9 Implicit Shape Model/source/: CMakeLists.txt  classification_run.bat  implicit_shape_model_classification.cpp  implicit_shape_model_training.cpp  ism_test_all.pcd  ism_test_wolf.pcd  ism_train_cat.pcd  ism_train_horse.pcd  ism_train_lioness.pcd  ism_train_michael.pcd  ism_train_wolf.pcd  train_run.bat
(+72 files in other folders)
