cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
set(PCL_DIR "C:/Program\ Files/PCL/cmake/PCLConfig.cmake")
project(HybirdICP)
find_package(PCL 1.7)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(HybirdICP hybird_rigid_ICP.cpp)
target_link_libraries(HybirdICP ${PCL_LIBRARIES})